<resources>
    <string name="app_name">NoweeProject</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_text_to_the_message">Type a message...</string>
    <string name="nowee_login">NOWEE Login</string>
    <string name="email_address">Email Address</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="you_re_logged_in">You\'re Logged in!</string>
    <string name="crash">crash</string>
    <string name="home">News</string>
    <string name="noweeStatusText">Nowee Status</string>


    //Jesse Strings
    <string name="addExistButton">Add</string>
    <string name="usernameText">Nowee Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Surname</string>
    <string name="emailAddress">Email Address</string>
    <string name="phoneNumber"> Phone Number</string>
    <string name="newContactText">New Contact</string>
    <string name="createContactBtn">Create</string>
    <string name="profileImage">ProfileImage</string>
    <string name="nowee_group_image">Nowee Group Image</string>
    <string name="username"> </string>
    <string name="groupAddDesc">groupAddDesc</string>
    <string name="existContactBtn"></string>
    <string name="addNewContactBtn"></string>
    <string name="chatText">chat</string>
    <string name="checkText">Existing Contact</string>
    <string name="new_contactText">New Contact</string>
    <string name="statusSendBtn">Send</string>
    <string name="recent_news">Recent News</string>
    // HUU String
    <string name="phone_status">"Phone Status: "</string>
    <string name="ringing">"RINGING, number: "</string>
    <string name="restarting_app">Restarting app</string>
    <string name="permission_not_granted">PERMISSION NOT GRANTED!</string>
    <string name="failure_permission">Failure to obtain permission!</string>
    <string name="send_a_message">Send a message</string>
    <string name="select_contact">Select Contact</string>
    <string name="enter_message_here">Type a message...</string>
    <string name="phone_disabled">Phone calling disabled.</string>
    <string name="retry">Retry</string>
    <string name="sms_disabled">SMS usage disabled</string>
    <string name="granted_permission">Permission Granted</string>
    <string name="select_phone">Select phone number</string>
    <string name="nowee_chat">Nowee Chat</string>
    <string name="message">message</string>
</resources>