<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NoweeColour2"
    android:backgroundTint="@color/NoweeColour2">


    <com.google.android.material.textfield.TextInputEditText
        android:textColorHint="@color/NoweeColour"
        android:id="@+id/textInputEditText"
        android:layout_width="299dp"
        android:layout_height="52dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="236dp"
        android:hint="@string/add_text_to_the_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/noweeStatusText"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="324dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="@color/NoweeColour"
        android:text="@string/statusSendBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>