<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.noweeproject.ChatActivity">


    <TextView
        android:id="@+id/editText_main"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:hint="@string/select_phone"
        />

    <EditText
        android:id="@+id/sms_message"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_main"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:hint="@string/enter_message_here"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/message_icon"
        android:layout_width="303dp"
        android:layout_height="61dp"
        android:layout_below="@id/editText_main"
        android:layout_marginStart="-355dp"
        android:layout_marginLeft="-355dp"
        android:layout_marginTop="313dp"
        android:layout_toEndOf="@id/sms_message"
        android:layout_toRightOf="@id/sms_message"
        android:contentDescription="@string/send_a_message"
        android:onClick="smsSendMessage"
        android:text="@string/send_a_message"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sms_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/retry"
        android:onClick="retryApp"
        android:text="@string/retry"
        android:visibility="invisible" />

    <Button
        android:id="@+id/selectContactBtn"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="54dp"
        android:text="Slect Contact" />

</RelativeLayout>
