<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorAccent"
    android:backgroundTintMode="add"
    tools:context=".existingContact">

    <ImageView
        android:id="@+id/groupAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="57dp"
        android:contentDescription="@string/groupAddDesc"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/group" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="410dp"
        android:layout_height="259dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593">

        <TextView
            android:id="@+id/noweeUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/usernameText"
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            android:backgroundTintMode="add"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:onClick="btnExist_Contact_onClick"
            android:text="@string/addExistButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>